src/test/deca/syntaxe_contextuelle/invalid/test_pass_3_mod_not_int.deca
// Description:
//    Program testing that we can not use op mod on non int type 
//
// Results:
//    error
//
// History:
//    Created on 9/01/2025

{
    int a = 4.5 % 5;
}
